# rez-python

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  configure.sh  install.sh  package.py
